@@ -42,7 +42,7 @@ class SiteDesignContentCollectionViewController: CollapsableHeaderViewController
 
         super.init(scrollableView: collectionView,
                    mainTitle: NSLocalizedString("Choose a design", comment: "Title for the screen to pick a design and homepage for a site."),
-                   prompt: NSLocalizedString("Pick your favorite homepage layout. You can customize or change it later.", comment: "Prompt for the screen to pick a design and homepage for a site."),
+                   prompt: NSLocalizedString("Pick your favorite homepage layout. You can edit and customize it later.", comment: "Prompt for the screen to pick a design and homepage for a site."),
                    primaryActionTitle: NSLocalizedString("Choose", comment: "Title for the button to progress with the selected site homepage design"),
                    secondaryActionTitle: NSLocalizedString("Preview", comment: "Title for button to preview a selected homepage design"))
     }
